# lisette

./: CHANGELOG.md  CNAME  README.md  cachy.jsonl  cachy.txt  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  test_cache.html  test_cache.md  usage.html  usage.html.md
.github/workflows/: test.yaml  test.yaml.off
lisette/: __init__.py  _modidx.py  asink.py  cachy.py  core.py  core_fastllm.py  types.py  usage.py
nbs/: 00_core.ipynb  00_core_fastllm.ipynb  01_async.ipynb  01_cachy.ipynb  01_usage.ipynb  _01_async.py  index.ipynb  nbdev.yml  test_cache.ipynb
