[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="lisette"
dynamic = ["version"]
description = "litellm helper"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "AnswerDotAI", email = "support@answer.ai"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/lisette"
Documentation = "https://lisette.answer.ai/"

[project.entry-points.nbdev]
lisette = "lisette._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "lisette.__version__"}

[tool.setuptools.packages.find]
include = ["lisette"]

[tool.nbdev]
custom_sidebar = false
